Rectified the issue where a thin line of whitespace would show up at around the page

--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,8 @@ footer{
     height: 100px;
     top: 200px;
 }
+
+html,body {
+    margin:0;
+    padding:0;
+}
